--- a/Real_project_Ansible/roles/alertmanager/tasks/main.yml
+++ b/Real_project_Ansible/roles/alertmanager/tasks/main.yml
@@ -67,6 +67,6 @@
 
 - name: Check if alertmanager is accessible
   uri:
-    url: http://localhost:9093
+    url: http://52.90.85.93:9093
     method: GET
     status_code: 200
