--- a/Real_project_Ansible/roles/prometheus/tasks/main.yml
+++ b/Real_project_Ansible/roles/prometheus/tasks/main.yml
@@ -72,6 +72,6 @@
 
 - name: Check if prometheus is accessible
   uri:
-    url: http://localhost:9090
+    url: http://52.90.85.93:9090
     method: GET
     status_code: 200
