--- a/Real_project_Ansible/roles/grafana/tasks/main.yml
+++ b/Real_project_Ansible/roles/grafana/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Install grafana
-  yum:
+  apt:
     name: https://s3-us-west-2.amazonaws.com/grafana-releases/release/grafana-{{ version }}-1.x86_64.rpm
     state: latest
 
